syntax = "proto3";

package user.v1;

option go_package = "github.com/vasapolrittideah/money-tracker-api/protogen/user/v1;userpbv1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service UserService {
  rpc GetAllUsers (GetAllUsersRequest) returns (GetAllUsersResponse) {}
  rpc GetUserByID (GetUserByIDRequest) returns (GetUserByIDResponse) {}
  rpc GetUserByEmail (GetUserByEmailRequest) returns (GetUserByEmailResponse) {}
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {}
}

message User {
  uint64 id = 1;
  string full_name = 2;
  string email = 3;
  bool verified = 4;
  bool registered = 5;
  string password = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

// Request message
message GetAllUsersRequest {}

message GetUserByIDRequest {
  uint64 id = 1;
}

message GetUserByEmailRequest {
  string email = 1;
}

message CreateUserRequest {
  string full_name = 1;
  string email = 2;
  string password = 3;
}

message UpdateUserRequest {
  uint64 id = 1;
  google.protobuf.StringValue full_name = 2;
  google.protobuf.StringValue email = 3;
  google.protobuf.StringValue password = 4;
  google.protobuf.BoolValue verified = 5;
  google.protobuf.BoolValue registered = 6;
}

message DeleteUserRequest {
  uint64 id = 1;
}

// Response message
message CreateUserResponse {
  User user = 1;
}

message GetAllUsersResponse {
  repeated User users = 1;
}

message GetUserByIDResponse {
  User user = 1;
}

message GetUserByEmailResponse {
  User user = 1;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserResponse {
  User user = 1;
}